--- a/profile/index.html
+++ b/profile/index.html
@@ -76,7 +76,7 @@
 
             <div class="col-sm-9">
                 <div class="headline-left margin-bottom-30">
-                    <h2 class="headline-brd heading-md">ABOU ME</h2>
+                    <h2 class="headline-brd heading-md">ABOUT ME</h2>
                 </div>
                 <div class="overflow-h">
                     <div class="pull-left">
