--- a/profile/portfolio.html
+++ b/profile/portfolio.html
@@ -116,14 +116,14 @@
             <div class="cbp-item interation graphic">
                 <div class="cbp-caption" >
                     <div class="cbp-caption-defaultWrap">
-                        <img src="https://1.bp.blogspot.com/-dZnoNg7vP68/WC2eyv0O7nI/AAAAAAAACm8/dWau828SwH4qfIz5qz3y4GJqVsoicr6TwCLcB/s1600/index.png" alt="">
+                        <img src="https://github.com/jazzydoggy/jazzydoggy.github.io/blob/main/profile/myProjects/rex/images/compalRex_ID_0525.png?raw=true" alt="">
                     </div>
                     <div class="cbp-caption-activeWrap">
                         <div class="cbp-l-caption-alignCenter">
                             <div class="cbp-l-caption-body">
                                 <ul class="link-captions">
                                     <li><a href="myProjects/capit/main.html" class="cbp-singlePage" rel="nofollow"><i class="rounded-x fa fa-link"></i></a></li>
-                                    <li><a href="https://1.bp.blogspot.com/-dZnoNg7vP68/WC2eyv0O7nI/AAAAAAAACm8/dWau828SwH4qfIz5qz3y4GJqVsoicr6TwCLcB/s1600/index.png" class="cbp-lightbox" data-title="Design Object"><i class="rounded-x fa fa-search"></i></a></li>
+                                    <li><a href="https://github.com/jazzydoggy/jazzydoggy.github.io/blob/main/profile/myProjects/rex/images/compalRex_ID_0525.png?raw=true" class="cbp-lightbox" data-title="Design Object"><i class="rounded-x fa fa-search"></i></a></li>
                                 </ul>
                                 <div class="cbp-l-grid-agency-title">REX</div>
                                 <div class="cbp-l-grid-agency-desc">Innovation Project</div>
@@ -136,14 +136,14 @@
             <div class="cbp-item interation graphic">
                 <div class="cbp-caption" >
                     <div class="cbp-caption-defaultWrap">
-                        <img src="https://1.bp.blogspot.com/-dZnoNg7vP68/WC2eyv0O7nI/AAAAAAAACm8/dWau828SwH4qfIz5qz3y4GJqVsoicr6TwCLcB/s1600/index.png" alt="">
+                        <img src="https://github.com/jazzydoggy/jazzydoggy.github.io/blob/main/profile/myProjects/trendcard/images/1.png?raw=true" alt="">
                     </div>
                     <div class="cbp-caption-activeWrap">
                         <div class="cbp-l-caption-alignCenter">
                             <div class="cbp-l-caption-body">
                                 <ul class="link-captions">
                                     <li><a href="myProjects/capit/main.html" class="cbp-singlePage" rel="nofollow"><i class="rounded-x fa fa-link"></i></a></li>
-                                    <li><a href="https://1.bp.blogspot.com/-dZnoNg7vP68/WC2eyv0O7nI/AAAAAAAACm8/dWau828SwH4qfIz5qz3y4GJqVsoicr6TwCLcB/s1600/index.png" class="cbp-lightbox" data-title="Design Object"><i class="rounded-x fa fa-search"></i></a></li>
+                                    <li><a href="https://github.com/jazzydoggy/jazzydoggy.github.io/blob/main/profile/myProjects/trendcard/images/1.png?raw=true" class="cbp-lightbox" data-title="Design Object"><i class="rounded-x fa fa-search"></i></a></li>
                                 </ul>
                                 <div class="cbp-l-grid-agency-title">Trend Card</div>
                                 <div class="cbp-l-grid-agency-desc">Web</div>
