--- a/profile/portfolio.html
+++ b/profile/portfolio.html
@@ -142,7 +142,7 @@
                         <div class="cbp-l-caption-alignCenter">
                             <div class="cbp-l-caption-body">
                                 <ul class="link-captions">
-                                    <li><a href="myProjects/capit/main.html" class="cbp-singlePage" rel="nofollow"><i class="rounded-x fa fa-link"></i></a></li>
+                                    <li><a href="http://localhost/trendcardbuilder" rel="nofollow" target="_blank"><i class="rounded-x fa fa-link"></i></a></li>
                                     <li><a href="https://github.com/jazzydoggy/jazzydoggy.github.io/blob/main/profile/myProjects/trendcard/images/1.png?raw=true" class="cbp-lightbox" data-title="Design Object"><i class="rounded-x fa fa-search"></i></a></li>
                                 </ul>
                                 <div class="cbp-l-grid-agency-title">Trend Card</div>
